--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@types/node": "^18.16.3",
     "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
     "node-telegram-bot-api": "^0.61.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "pg": "^8.10.0",
+    "pg-promise": "^11.4.3"
   }
 }
